add buttons, draft basic function outline

--- a/test/test.html
+++ b/test/test.html
@@ -10,10 +10,12 @@
   <body>
       <div id="app">
           <div id="timer-container">
-              
+
           </div>
           <div id="button-container">
-
+              <button type="button" id="start"></button>
+              <button type="button" id="stop"></button>
+              <button type="button" id="reset"></button>                            
           </div>
       </div>
     <div id="qunit"></div>
