Add display for timer

--- a/test/test.html
+++ b/test/test.html
@@ -13,9 +13,9 @@
 
           </div>
           <div id="button-container">
-              <button type="button" id="start"></button>
-              <button type="button" id="stop"></button>
-              <button type="button" id="reset"></button>                            
+              <button type="button" class="btn" id="start">Start</button>
+              <button type="button" class="btn" id="stop">Stop</button>
+              <button type="button" class="btn" id="reset">Reset</button>                            
           </div>
       </div>
     <div id="qunit"></div>
