--- a/test/test.html
+++ b/test/test.html
@@ -10,12 +10,12 @@
   <body>
       <div id="app">
           <div id="timer-container">
-
+              <h2 id="time"></h2>
           </div>
           <div id="button-container">
               <button type="button" class="btn" id="start">Start</button>
               <button type="button" class="btn" id="stop">Stop</button>
-              <button type="button" class="btn" id="reset">Reset</button>                            
+              <button type="button" class="btn" id="reset">Reset</button>
           </div>
       </div>
     <div id="qunit"></div>
