add sun and moon svgs

--- a/test/test.html
+++ b/test/test.html
@@ -17,6 +17,10 @@
               <button type="button" class="btn" id="stop">Stop</button>
               <button type="button" class="btn" id="reset">Reset</button>
           </div>
+          <div id="theme-container">
+             <object id='sun' data="../img/sun.svg" type="image/svg+xml"></object>
+             <object id='moon' data="../img/moon.svg" type="image/svg+xml"></object>
+          </div>
       </div>
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
