--- a/test/test.html
+++ b/test/test.html
@@ -18,8 +18,8 @@
               <button type="button" class="btn" id="reset">Reset</button>
           </div>
           <div id="theme-container">
-             <object id='sun' data="../img/sun.svg" type="image/svg+xml"></object>
-             <object id='moon' data="../img/moon.svg" type="image/svg+xml"></object>
+              <img src="../img/sun.svg" alt="sun" id="sun"/>
+              <img src="../img/moon.svg" alt="moon" id="moon"/>
           </div>
       </div>
     <div id="qunit"></div>
