--- a/test/test.html
+++ b/test/test.html
@@ -13,10 +13,12 @@
               <h2 id="time"></h2>
           </div>
           <div id="button-container">
+              <button type="button" class="btn" id="lap">Lap</button>
               <button type="button" class="btn" id="start">Start</button>
               <button type="button" class="btn" id="stop">Stop</button>
               <button type="button" class="btn" id="reset">Reset</button>
           </div>
+          <div id="lap-container"></div>
           <div id="theme-container">
               <img src="../img/sun.svg" alt="sun" id="sun"/>
               <img src="../img/moon.svg" alt="moon" id="moon"/>
