make final cleanups
update button hover colors, set default view for lap counter, so doesn't show up, update readme to include UI themes, removed blanket.js and saucelabs.js files from src folder

--- a/test/test.html
+++ b/test/test.html
@@ -13,7 +13,7 @@
               <h2 id="time"></h2>
           </div>
           <div id="button-container">
-              <button type="button" class="btn" id="lap">Lap</button>
+              <button type="button" class="btn hide-btn" id="lap">Lap</button>
               <button type="button" class="btn" id="start">Start</button>
               <button type="button" class="btn" id="stop">Stop</button>
               <button type="button" class="btn" id="reset">Reset</button>
@@ -29,9 +29,5 @@
     <script src="resources/qunit.js"></script>
     <script src="../stopwatch.js"></script>
     <script src="test.js"></script>
-    <!-- <script src="resources/saucelabs.js"></script> -->
-<!-- <script src="resources/blanket.js"></script> load from CDN! -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/blanket.js/1.1.4/blanket.min.js"></script> -->
-
   </body>
 </html>
