--- a/test/test.html
+++ b/test/test.html
@@ -10,7 +10,7 @@
   <body>
       <div id="app">
           <div id="timer-container">
-              <h2 id="time"></h2>
+              <h2 id="time">00:00:00:00</h2>
           </div>
           <div id="button-container">
               <button type="button" class="btn hide-btn" id="lap">Lap</button>
