add stars to night mode
it's not totally idiot proof but there's a moving background of stars that fade in when night mode is clicked

--- a/test/test.html
+++ b/test/test.html
@@ -23,6 +23,7 @@
               <img src="../img/sun.svg" alt="sun" id="sun"/>
               <img src="../img/moon.svg" alt="moon" id="moon"/>
           </div>
+          <div id="star-overlay"></div>
       </div>
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
