--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Stopwatch</title>
-    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <link rel="stylesheet" href="resources/qunit.css">
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
       <div id="app">
@@ -20,15 +18,11 @@
           </div>
           <div id="lap-container"></div>
           <div id="theme-container">
-              <img src="../img/sun.svg" alt="sun" id="sun"/>
-              <img src="../img/moon.svg" alt="moon" id="moon"/>
+              <img src="./img/sun.svg" alt="sun" id="sun"/>
+              <img src="./img/moon.svg" alt="moon" id="moon"/>
           </div>
           <div id="star-overlay"></div>
       </div>
-    <div id="qunit"></div>
-    <div id="qunit-fixture"></div>
-    <script src="resources/qunit.js"></script>
-    <script src="../stopwatch.js"></script>
-    <script src="test.js"></script>
+    <script src="stopwatch.js"></script>
   </body>
 </html>
