add link to droid sans mono

--- a/test/test.html
+++ b/test/test.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Stopwatch</title>
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="resources/qunit.css">
     <link rel="stylesheet" href="test.css">
   </head>
