--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
           <div id="star-overlay"></div>
       </div>
     <script src="stopwatch.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
