--- a/test/test.html
+++ b/test/test.html
@@ -30,6 +30,7 @@
     <div id="qunit-fixture"></div>
     <script src="resources/qunit.js"></script>
     <script src="../stopwatch.js"></script>
+    <script src="../main.js"></script>
     <script src="test.js"></script>
   </body>
 </html>
